--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 body {
+    font-family: sans-serif;
     background-color: #222;
     color: #fff;
+    margin: 0;
 }
 
-h1 {
-    font-size: 2em;
-    font-weight: bold;
-    margin-top: 0;
-}
-
-div {
+.stock_info {
+    margin-top: 10px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 5px;
-}
-
-span {
-    font-size: 1em;
+    flex-direction: column;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 #price_div {
@@ -33,21 +27,21 @@ span {
 }
 
 #symbol {
-    width: 100px;
+    margin-bottom: 5px;
 }
 
 #name {
-    width: 200px;
+    margin-bottom: 5px;
 }
 
-#current_price {
-    width: 100px;
+#price {
+    margin-bottom: 5px;
 }
 
 #open {
-    width: 100px;
+    margin-bottom: 5px;
 }
 
 #percent_change {
-    width: 100px;
+    margin-bottom: 5px;
 }
