--- a/style.css
+++ b/style.css
@@ -3,19 +3,25 @@ body {
     background-color: #222;
     color: #fff;
     margin: 0;
+    width: 100%;
 }
 
 .stock_info {
-    margin-top: 20px;
+    height: 80vh;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .search {
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
 }
 
 #search {
@@ -23,15 +29,15 @@ body {
     font-weight: bold;
     font-size: 18px;
     text-align: center;
-    width: 70px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 5px;
+    margin-right: 5px;
     border: none;
 }
 
 #submit {
-    padding: 3px;
     font-size: 18px;
+    padding: 10px;
     background: #fff;
     border-radius: 5px;
     border: none;
