--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Andale Mono", monospace;
+    font-size: 18px;
     background-color: #222;
     color: #fff;
     margin: 0;
